--- a/view/layouts/main.phtml
+++ b/view/layouts/main.phtml
@@ -24,6 +24,22 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
+<!--Messages section start-->
+<?php if ($errors = $this->getMessages()->get('error')): ?>
+    <div class="alert alert-danger" role="alert">
+        <?php foreach ($errors as $key => $message): ?>
+            <div><?= $message ?></div>
+        <?php endforeach; ?>
+    </div>
+<?php endif; ?>
+<?php if ($success = $this->getMessages()->get('success')): ?>
+    <div class="alert alert-success" role="alert">
+        <?php foreach ($success as $key => $message): ?>
+            <div><?= $message ?></div>
+        <?php endforeach; ?>
+    </div>
+<?php endif; ?>
+<!--Messages section end-->
 <div class="container-scroller">
     <!-- partial:partials/_sidebar.html -->
     <nav class="sidebar sidebar-offcanvas" id="sidebar">
