--- a/view/layouts/default.phtml
+++ b/view/layouts/default.phtml
@@ -1,4 +1,3 @@
-// Purpose: To display login/register page
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,7 +28,7 @@
 <!--Messages section start-->
 <?php if ($errors = $this->getMessages()->get('error')): ?>
     <div class="alert alert-danger" role="alert">
-        <?php foreach ($errors as $key => $message): ?>
+        <?php foreach ($errors as $key => $message): ?>// Purpose: To display login/register page
             <div><?= $message ?></div>
         <?php endforeach; ?>
     </div>
@@ -50,7 +49,7 @@
         <!-- partial:partials/_footer.html -->
         <footer class="footer">
             <div class="d-sm-flex justify-content-center justify-content-sm-between">
-                <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © bootstrapdash.com 2020</span>
+                <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © bootstrapdash.com 2024</span>
                 <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"> Free <a href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank">Bootstrap admin templates</a> from Bootstrapdash.com</span>
             </div>
         </footer>
