--- a/view/templates/login.phtml
+++ b/view/templates/login.phtml
@@ -1,10 +1,11 @@
-<div class="d-flex justify-content-center align-items-center vh-40">
-    <div class="position-relative">
-        <div class="position-absolute top-40 start-40 translate-middle">
-            <h1>Login page</h1>
-
-            <form style="min-width: 300px" action="/account/login" method="post">
-                <div class="form-group">
+<div class="">
+    <div class="">
+        <div class="">
+            <form class="col-lg-5 offset-lg-3 " style="min-width: 200px" action="/account/login" method="post">
+                <div class="form-group row justify-content-center">
+                    <h3>Login</h3>
+                </div>
+                <div class="form-group row justify-content-center">
                     <label for="exampleInputEmail1">Email address</label>
                     <input type="email"
                            class="form-control"
@@ -14,7 +15,7 @@
                            name="email">
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
-                <div class="form-group">
+                <div class="form-group row justify-content-center">
                     <label for="exampleInputPassword1">Password</label>
                     <input type="password"
                            class="form-control"
@@ -22,13 +23,13 @@
                            placeholder="Password"
                            name="password">
                 </div>
-                <div class="form-group">
-                    <label for="singup">If you dont have acc yet</label>
-                    <span id="singup">
+                <div class="form-group row justify-content-center">
+                    <span>If you dont have acc yet: </span>
+                    <span style ='margin-left: 5px' id="singup">
                         <a href="/account/register">SingUp</a>
                     </span>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">Login</button>
             </form>
         </div>
     </div>
