--- a/view/templates/vehicle/view.phtml
+++ b/view/templates/vehicle/view.phtml
@@ -2,5 +2,5 @@
 $item = $this->getData('item');
 ?>
 <?php if ($item): ?>
-    <h1><?= $item->getName(); ?></h1>
+    <h1><?= $item->getName() ?></h1>
 <?php endif; ?>
