--- a/view/layouts/default.phtml
+++ b/view/layouts/default.phtml
@@ -25,60 +25,60 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-<!--Messages section start-->
-<?php if ($errors = $this->getMessages()->get('error')): ?>
-    <div class="alert alert-danger" role="alert">
-        <?php foreach ($errors as $key => $message): ?>// Purpose: To display login/register page
-            <div><?= $message ?></div>
-        <?php endforeach; ?>
-    </div>
-<?php endif; ?>
-<?php if ($success = $this->getMessages()->get('success')): ?>
-    <div class="alert alert-success" role="alert">
-        <?php foreach ($success as $key => $message): ?>
-            <div><?= $message ?></div>
-        <?php endforeach; ?>
-    </div>
-<?php endif; ?>
-<!--Messages section end-->
-<!-- partial -->
-        <div class="main-panel">
-            <?= $this->displayBody()?>
+    <!--Messages section start-->
+    <?php if ($errors = $this->getMessages()->get('error')): ?>
+        <div class="alert alert-danger" role="alert">
+            <?php foreach ($errors as $key => $message): ?>
+                <div><?= $message ?></div>
+            <?php endforeach; ?>
         </div>
-        <!-- content-wrapper ends -->
-        <!-- partial:partials/_footer.html -->
-        <footer class="footer">
-            <div class="d-sm-flex justify-content-center justify-content-sm-between">
-                <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © bootstrapdash.com 2024</span>
-                <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"> Free <a href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank">Bootstrap admin templates</a> from Bootstrapdash.com</span>
+    <?php endif; ?>
+    <?php if ($success = $this->getMessages()->get('success')): ?>
+        <div class="alert alert-success" role="alert">
+            <?php foreach ($success as $key => $message): ?>
+                <div><?= $message ?></div>
+            <?php endforeach; ?>
+        </div>
+    <?php endif; ?>
+    <!--Messages section end-->
+    <!-- partial -->
+            <div class="main-panel">
+                <?= $this->displayBody()?>
             </div>
-        </footer>
-        <!-- partial -->
+            <!-- content-wrapper ends -->
+            <!-- partial:partials/_footer.html -->
+            <footer class="footer">
+                <div class="d-sm-flex justify-content-center justify-content-sm-between">
+                    <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © bootstrapdash.com 2024</span>
+                    <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"> Free <a href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank">Bootstrap admin templates</a> from Bootstrapdash.com</span>
+                </div>
+            </footer>
+            <!-- partial -->
+        </div>
+        <!-- main-panel ends -->
     </div>
-    <!-- main-panel ends -->
-</div>
-<!-- page-body-wrapper ends -->
-</div>
-<!-- container-scroller -->
-<!-- plugins:js -->
-<script src="/assets/vendors/js/vendor.bundle.base.js"></script>
-<!-- endinject -->
-<!-- Plugin js for this page -->
-<script src="/assets/vendors/chart.js/Chart.min.js"></script>
-<script src="/assets/vendors/progressbar.js/progressbar.min.js"></script>
-<script src="/assets/vendors/jvectormap/jquery-jvectormap.min.js"></script>
-<script src="/assets/vendors/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
-<script src="/assets/vendors/owl-carousel-2/owl.carousel.min.js"></script>
-<!-- End plugin js for this page -->
-<!-- inject:js -->
-<script src="/assets/js/off-canvas.js"></script>
-<script src="/assets/js/hoverable-collapse.js"></script>
-<script src="/assets/js/misc.js"></script>
-<script src="/assets/js/settings.js"></script>
-<script src="/assets/js/todolist.js"></script>
-<!-- endinject -->
-<!-- Custom js for this page -->
-<script src="/assets/js/dashboard.js"></script>
-<!-- End custom js for this page -->
+    <!-- page-body-wrapper ends -->
+    </div>
+    <!-- container-scroller -->
+    <!-- plugins:js -->
+    <script src="/assets/vendors/js/vendor.bundle.base.js"></script>
+    <!-- endinject -->
+    <!-- Plugin js for this page -->
+    <script src="/assets/vendors/chart.js/Chart.min.js"></script>
+    <script src="/assets/vendors/progressbar.js/progressbar.min.js"></script>
+    <script src="/assets/vendors/jvectormap/jquery-jvectormap.min.js"></script>
+    <script src="/assets/vendors/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
+    <script src="/assets/vendors/owl-carousel-2/owl.carousel.min.js"></script>
+    <!-- End plugin js for this page -->
+    <!-- inject:js -->
+    <script src="/assets/js/off-canvas.js"></script>
+    <script src="/assets/js/hoverable-collapse.js"></script>
+    <script src="/assets/js/misc.js"></script>
+    <script src="/assets/js/settings.js"></script>
+    <script src="/assets/js/todolist.js"></script>
+    <!-- endinject -->
+    <!-- Custom js for this page -->
+    <script src="/assets/js/dashboard.js"></script>
+    <!-- End custom js for this page -->
 </body>
 </html>
