--- a/view/templates/vehicle/list.phtml
+++ b/view/templates/vehicle/list.phtml
@@ -16,23 +16,23 @@ $items = $this->getData('items');
     <tbody>
     <?php foreach ($items as $item): ?>
     <tr>
-        <th scope="row"><?= $item->getId(); ?></th>
-        <td><?= $item->getName(); ?></td>
+        <th scope="row"><?= $item->getId() ?></th>
+        <td><?= $item->getName() ?></td>
         <td>
             <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle"
                         type="button"
-                        id="dropdownMenuButton<?= $item->getId(); ?>"
+                        id="dropdownMenuButton<?= $item->getId() ?>"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Action
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="/vehicle/<?= $item->getId(); ?>">View</a>
-                    <a class="dropdown-item" href="/vehicle/edit/<?= $item->getId(); ?>">Edit</a>
-                    <a id="<?= $item->getId();?>"
+                    <a class="dropdown-item" href="/vehicle/<?= $item->getId() ?>">View</a>
+                    <a class="dropdown-item" href="/vehicle/edit/<?= $item->getId() ?>">Edit</a>
+                    <a id="<?= $item->getId() ?>"
                        class="dropdown-item delete"
                        method="delete"
-                       href="/vehicle/delete/<?= $item->getId(); ?>">
+                       href="/vehicle/delete/<?= $item->getId() ?>">
                         Delete
                     </a>
                 </div>
